src/test/ui/borrowck/borrowck-move-from-unsafe-ptr.nll.stderr
error[E0507]: cannot move out of dereference of raw pointer
  --> $DIR/borrowck-move-from-unsafe-ptr.rs:2:13
   |
LL |     let y = *x; //~ ERROR cannot move out of dereference of raw pointer
   |             ^^
   |             |
   |             cannot move out of dereference of raw pointer
   |             help: consider removing the `*`: `x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
