src/test/ui/borrowck/borrowck-move-from-unsafe-ptr.rs
unsafe fn foo(x: *const Box<isize>) -> Box<isize> {
    let y = *x; //~ ERROR cannot move out of dereference of raw pointer
    return y;
}

fn main() {
}
